cabal-version:       3.0

name:                assignment-icalendar

version:             0.1.0.0

author:              Talen & Compilers

build-type:          Simple

executable icalendar
  main-is:            Main.hs

  other-modules:        Calendar
                      , DateTime
                      , Features

  build-depends:       array,
                       base >=4.14,
                       boxes,
                       containers,
                       uu-tc == 2015.1.1

  hs-source-dirs:      src

  default-language:    Haskell2010
